force-app/main/default/objects/Service_Contract__c/Service_Contract__c.object-meta.xml
<CustomObject>
    <description>The products and services offered to business.</description>
    <label>Service Contract</label>
    <nameField>
        <label>Service Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>