force-app/main/default/objects/Service_Contract__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account that has a contract with EERE.</description>
    <inlineHelpText>What is the account that is tied to this contract (product and services).</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Products_and_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>