force-app/main/default/objects/Service_Contract__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact information that the contract is under.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Products_and_Services</relationshipName>
    <type>Lookup</type>
</CustomField>