force-app/main/default/objects/Service_Contract__c/fields/Industry_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_NAICS_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The industry NAICS the business is in.</description>
    <label>Industry NAICS Code</label>
    <referenceTo>Industry_Fund__c</referenceTo>
    <relationshipName>Product_Service_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>