force-app/main/default/objects/Service_Contract__c/fields/Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Name__c</fullName>
    <description>The industry name the business is in.</description>
    <formula>Industry_NAICS_Code__r.Industry_Name__c</formula>
    <label>Industry Name</label>
    <type>Text</type>
</CustomField>