force-app/main/default/objects/Service_Contract__c/fields/Negotiation_Project_Performance_Stage__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Project_Performance_Stage__c</fullName>
    <description>The rest of the stages for the business process.</description>
    <label>Negotiation &amp; Project Performance Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation Stage</fullName>
                <default>true</default>
                <label>Negotiation Stage</label>
            </value>
            <value>
                <fullName>Project Performance Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>