force-app/main/default/objects/Service_Contract__c/fields/Remaining_Days_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days_Expiration_Date__c</fullName>
    <description>The remaining days for the contract to expire.</description>
    <formula>Contract_End_Date__c - Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days Expiration Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>