force-app/main/default/objects/Service_Contract__c/fields/Type_of_Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work_Category__c</fullName>
    <description>The type of work the contract was for and accepted.</description>
    <label>Type of Work - Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Work_Category_GLOBAL</valueSetName>
    </valueSet>
</CustomField>